k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app
  labels:
    app: student-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: student-app
  template:
    metadata:
      labels:
        app: student-app
    spec:
      containers:
      - name: student-app-container
        image: sonbarse17/ruby-app:latest
        ports:
        - containerPort: 3000
