k8s/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: student-app-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
  clusterIP: None
